--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -23,6 +23,10 @@
             </li>
             <li class="nav-item">
                <a routerLinkActive="active" 
+                  routerLink="/estadoTopicos" class="nav-link">Estado de topicos <span class="sr-only">(current)</span>  </a>
+            </li>
+            <li class="nav-item">
+               <a routerLinkActive="active" 
                   routerLink="/sensorica" class="nav-link">Sensórica <span class="sr-only">(current)</span>  </a>
             </li>
             <li class="nav-item">
