--- a/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
@@ -43,7 +43,7 @@
          <div class="col-4">
             <img style="width: 270px" src="../../../assets/arm_labels.png" alt="Brazo">
          </div>
-         <div class="col-8">
+         <!-- <div class="col-8">
           <table class="table">
             <tbody>
                <tr>
@@ -126,6 +126,6 @@
             </tbody>
          </table>  
          </div>
-      </div>
+      </div> -->
    </div>
 </div>
