--- a/Robocol/testapp/src/app/sensorica/sensorica.component.html
+++ b/Robocol/testapp/src/app/sensorica/sensorica.component.html
@@ -1,168 +1,51 @@
-<div class="sensors">
-
-<div id="sensors_info">
-	<div class="sensors_title">
-		<label>
-			<b>Sample 1.1 - Database analysis description</b>
-		</label>
-	</div>
-	<div class="categories">
-		<pre><b>Temperature:</b></pre>
-		<pre>	Tropical or megathermal.</pre>
-
-		<pre><b>PH:</b></pre>
-		<pre>	Alkaline.</pre>
-
-		<pre><b>CO:</b></pre>
-		<pre>	Volcanic gases.</pre>
-
-		<pre><b>Humidity:</b></pre>
-		<pre>	Perhumid.</pre>
-	</div>
-</div>
-
-
-<div id="sensors_measurements">
-	<div class="sensors_measurements_title">
-		<label>
-			<b>Sample 1.1 - Measurements</b>
-		</label>
-	</div>
-	<div class="sensors_measurements_box">
-		<label class="sensors_measurements_box_title">
-			Temperature
-			<div>
-				<input disabled id="temperature" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			PH
-			<div>
-				<input disabled id="ph" name="field2"/>
-			</div>
-		</label>
-	</div>
-
-	<div class="sensors_measurements_box_2">
-		<label class="sensors_measurements_box_title">
-			Humidity
-			<div>
-				<input disabled id="humidity" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			Air Quality
-			<div>
-				<input disabled id="air_quality" name="field2"/>
-			</div>
-		</label>
-	</div>
-
-	<div class="sensors_measurements_box_2">
-		<label class="sensors_measurements_box_title">
-			CO
-			<div>
-				<input disabled id="humidity" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			CO2
-			<div>
-				<input disabled id="air_quality" name="field2"/>
-			</div>
-		</label>
-	</div>
-
-	<div class="sensors_measurements_box_2">
-		<label class="sensors_measurements_box_title">
-			Methane Concentration
-			<div>
-				<input disabled id="humidity" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			Hydrogen Concentration
-			<div>
-				<input disabled id="air_quality" name="field2"/>
-			</div>
-		</label>
-	</div>
-
-	<div class="sensors_measurements_box_2">
-		<label class="sensors_measurements_box_title">
-			Wind Velocity
-			<div>
-				<input disabled id="humidity" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			Wind Direction
-			<div>
-				<input disabled id="air_quality" name="field2"/>
-			</div>
-		</label>
-	</div>
-
-</div>
-
-<div id="sample_img">
-    <img src="../../../assets/pirita.jpg" alt="Rocks">
-</div>
-
-<div id="EVA_info">
-
-	<!-- <div class="sensors_title" style="position: relative;top: 0px; left: 10px">
-		<label><b>EVA</b></label>
-	</div> -->
-	<br>
-	<table id="EVA_table">
-		<tr>
-			<th rowspan="4">TRASH</th>
-			<th colspan="3" id="EVA_pos">EVA Actual Position</th>
-			<th colspan="3"></th>
-			<th colspan="3"></th>
-			
-		</tr>
-		<tr>
-			<th id="EVA_1_1"><input type=submit value="1 - FULL"></th>
-			<th id="EVA_1_3"><input type=submit value="3 - FULL"></th>
-			<th id="EVA_1_5"><input type=submit value="5 - FULL"></th>
-			<th id="EVA_2_1"><input type=submit value="1 - EMPTY"></th>
-			<th id="EVA_2_3"><input type=submit value="3 - EMPTY"></th>
-			<th id="EVA_2_5"><input type=submit value="5 - EMPTY"></th>
-			<th id="EVA_3_1"><input type=submit value="1 - EMPTY"></th>
-			<th id="EVA_3_3"><input type=submit value="3 - EMPTY"></th>
-			<th id="EVA_3_5"><input type=submit value="5 - EMPTY"></th>
-		</tr>
-		<tr>
-			<th id="EVA_1_2"><input type=submit value="2 - FULL"></th>
-			<th id="EVA_1_4"><input type=submit value="4 - FULL"></th>
-			<th id="EVA_1_6"><input type=submit value="5 - FULL"></th>
-			<th id="EVA_2_2"><input type=submit value="2 - EMPTY"></th>
-			<th id="EVA_2_4"><input type=submit value="4 - EMPTY"></th>
-			<th id="EVA_2_6"><input type=submit value="6 - EMPTY"></th>
-			<th id="EVA_3_2"><input type=submit value="2 - EMPTY"></th>
-			<th id="EVA_3_4"><input type=submit value="4 - EMPTY"></th>
-			<th id="EVA_3_6"><input type=submit value="6 - EMPTY"></th>
-		</tr>
-		<tr>
-			<th colspan="3">Sample 1</th>
-			<th colspan="3">Sample 2</th>
-			<th colspan="3">Sample 3</th>
-		</tr>
-	</table>
-</div>
-
-</div>
-
-
-<!-- <div class="container">
+<div class="container">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Measurements</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">EVA</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Weather Station</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Live</a>
+    </li>
+  </ul>
+  <div class="row">
+    <div class="card">
+    	<div class="card-body">
+        <div class="row">
+          <div class="col">
+            <app-measurements></app-measurements>
+          </div>
+          <div class="col">
+            <app-analysis></app-analysis>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+      	<div class="card-body">
+          <div class="col">
+            <div class="row">
+              <app-station></app-station>
+            </div>
+            <div class="row">
+              <app-drilling></app-drilling>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
   <div class="row">
     <div class="col">
-      <app-telemetry></app-telemetry>
+      <app-eva></app-eva>
     </div>
     <div class="col">
-      <app-joystick></app-joystick>
+      <app-live></app-live>
     </div>
   </div>
-</div> -->
+</div>
