Nueva rama ROLES

--- a/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Measurements</a>
+      <a class="nav-link active" >Measurements</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">EVA</a>
+      <a class="nav-link" >EVA</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Weather Station</a>
+      <a class="nav-link" >Weather Station</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="#">Live</a>
+      <a class="nav-link disabled" >Live</a>
     </li>
   </ul>
   <div class="row">
