--- a/Robocol/testapp/src/app/views/home/home.component.html
+++ b/Robocol/testapp/src/app/views/home/home.component.html
@@ -1,4 +1,24 @@
-<div>
-      <h1>Home</h1>
-      <h3>Hola mundo</h3>
-    </div>
+<div class="m-1 table-responsive" >
+  
+    <table class="table table-borderless table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Rover</th>
+          <th scope="col">Lunabotics</th>
+          <th scope="col">Submarino</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td> <button id="roverBtn"> <img src="https://www.w3schools.com/images/picture.jpg" alt="Rover"> </button> </td>
+          <td> <button id="lunaboticsBtn"> <img src="https://www.w3schools.com/images/picture.jpg" alt="Lunabotics"> </button> </td>
+          <td> <button id="submarinoBtn"> <img src="https://www.w3schools.com/images/picture.jpg" alt="Submarino"> </button> </td>
+        </tr>
+       
+      </tbody>
+    </table>
+  
+
+    <app-auth></app-auth>
+
+</div>
