--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,7 +1,10 @@
-<header class="header">
+
+
+<div class='container-fluid'>
    <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top">
       <div class="navbar-header">
          <a class="navbar-brand" href="#"><img style="height: 48px; padding: 2px 10px;" src="../assets/robocol-BLANCO.png"></a>
+
       </div>
       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,8 +39,8 @@
          </ul>
       </div>
    </nav>
-</header>
 
 <main role="main" class="container-fluid">
   <router-outlet></router-outlet>
 </main>
+</div>
