--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
@@ -2,7 +2,7 @@
 
 <body scroll="no" style="background: rgba(255,255,255,1); margin: 0;height: 100vh;overflow: hidden;">
 
-	<div id="state_tests" style="z-index: 4;height: 522px;width: 710px;position: absolute;padding:29px;top: 0;bottom: 0;left: 50px;border-radius: 20px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);background: #00000020;margin: auto;">
+	<div class="col-xs-12 col-lg-6" id="state_tests " style="z-index: 4;height: 522px;width: 710px;position: absolute;padding:29px;top: 0;bottom: 0;left: 50px;border-radius: 20px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);background: #00000020;margin: auto;">
 
 		<img src="../../../assets/Rover_icon_status.png" style="position: absolute;left: 0;right: 0;top: 0;bottom: 0;margin:auto;width: auto;height: 422px">
 
@@ -70,7 +70,7 @@
 		<!-- Termina Hecho Franz -->	
 	</div>
 
-	<div id="batteries" style="z-index: 4;height: 518px;width: calc(104vw - 818px - 108px - 204px);position: absolute;padding:29px;top: 0;bottom: 0;right: 50px;border-radius: 20px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);background: #00000020;margin: auto;">
+	<div lass="col-xs-12 col-lg-6" id="batteries" style="z-index: 4;height: 518px;width: calc(104vw - 818px - 108px - 204px);position: absolute;padding:29px;top: 0;bottom: 0;right: 50px;border-radius: 20px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);background: #00000020;margin: auto;">
 
 		<div class="cell" style="top:0px">
 			<div class="col-6" style="text-align: center;">
