--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -30,7 +30,7 @@
             </li>
             <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
                <a routerLinkActive="active" 
-                  routerLink="/estadoTopicos" class="nav-link">Estado de topicos <span class="sr-only">(current)</span>  </a>
+                  routerLink="/estadoTopicos" class="nav-link">Ros Info<span class="sr-only">(current)</span>  </a>
             </li>
             <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
                <a routerLinkActive="active" 
