--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.css
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.css
@@ -1,13 +1,55 @@
+.contenedor1{
+	/*z-index: 4;
+	height: 679px;*/
+	width: 93%;
+	padding:50px;
+	top: 0;bottom: 0;
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
+	background: #00000020;
+	margin: 0;
+	display: inline-block;
+	text-align: left;
+	
+}
+.contenedor2{
+	
+	/*z-index: 3;
+	height: 679px;
+	width: 710px;*/
+	padding:50px;
+	top: 0; 
+	bottom: 0;
+	/*left: 750px;*/
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
+	background: #00000020;
+	margin: 0;
+	display: inline-block;
+}
+.label1{
+	/*position: absolute;*/
+	
+	bottom: 0;
+	margin:auto;
+	display: block;
+	text-align: center;
+	color: black;
+	font-size: 30px;
+}
+
 
 .barraBrazo{
-	width:330px; 
-	height:400px; 
-	overflow: scroll;
+	/*width:500px; */
+	height:500px; 
+	overflow: auto;
+	font-size: large;
+
 
 }
 .boxtopic{
 	z-index: 4;
-	height: 522px;
+	height: 522px;	
 	width: 510px;
 	/*position: absolute;*/
 	padding:29px;
@@ -18,11 +60,38 @@
 	margin: 0;
 
 }
-.label1{
-	/*position: absolute;*/
-	
+
+.labelTopEcho{
+
 	bottom: 0;
-	margin:auto;
-	display: block;text-align: center;
-	color: black
+	margin:0;
+	display: inline;
+	text-align: left;
+	color: black;
+	font-size: x-large;
+	padding-right: 75px;
+	width: 430px;
 }
+.TopicoEcho{
+	bottom: 0;
+	margin:0;
+	display: inline;
+	text-align: right;
+	color: black;
+	/*width: -webkit-fill-available;*/
+}
+.labelData{
+
+	bottom: 0;
+	margin:0;
+	display: inline;
+	text-align: right;
+	color: black;
+	font-size: x-large;
+	padding-right: 75px;
+	width: 630px;
+}
+.inputData{
+	width:-webkit-fill-available;
+	height: 310px;	
+}	
