--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
@@ -1,6 +1,3 @@
-<p>estado-topicos works!</p>
-
-
 <head>
 	<title>Untitled Document</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,36 +5,33 @@
 </head>
 
 <body>
+	<div class="col-xs-12 col-lg-6" style="text-align: center; display: inline-block; vertical-align: top;">
+		<div class= "contenedor1" id="state_tests" >
+			<p class="label1" id="label1">Rostopic List</p><br>
+				<div 
+					id="barraBrazo col-8" class="barraBrazo" > Aqui salen los topicos<br>
+				</div>				
+		</div>
+	</div>
+	<div class="col-xs-12 col-lg-6" style="text-align: center; display: inline-block; vertical-align: top;">
+		<div id="batteries" class="contenedor1 ">	
+			<br style="clear:both;"/>
 
-	<div class="boxtopic" style="top: 0; margin: 0;overflow: hidden; bottom: 0;left: 10px;"id="boxtopic">
-		<label class="label1" id="label1" style="position: absolute;left: 0;right: 1000px;top: 165px;">Brazo</label><br>
-		<div 
-			id="barraBrazo col-8" class="barraBrazo" >Aquí saldrá un scroll<br>
-			<br>sólo<br>daleinterlineados<br>simple<br>no ?
-		</div>
-	</div>
+			<p class="labelTopEcho" id="echo1">Tópico echo</p>
+			<input class="TopicoEcho"type="text" name="type"><br><br>
 
-	<div class="boxtopic" style="z-index: 4;height: 518px;width: 510px;padding:29px;top: 0;bottom: 0;right: 50px;border-radius: 20px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);background: #00000020;"id="boxtopic">
-		<label class="label1"id="temperature" style="left: 0;right: 0;top: 165px;">Traccion<br>0</label>
-		<div 
-			id="barraBrazo col-5" class="barraBrazo" >esta es la cambiada <br>
-			<br>sólo<br>dale<br>interlineados<br>simple<br>no ?
+			<p class="labelData" id="data" style="text-align: center;">Data</p><br>
+			<input class="inputData"type="text" name="type"><br><br>
+
+			<p class="labelTopEcho" id="typeTopic">Type   :</p>
+			<input class="TopicoEcho"type="text" name="type"><br><br>
+
+			<p class="labelTopEcho" id="publishers">Publishers:</p>
+			<input class="TopicoEcho"type="text" name="type"><br><br>
+
+			<p class="labelTopEcho" id="subscribers">Subscribers:</p>
+			<input class="TopicoEcho"type="text" name="type"><br><br>
 		</div>
-	</div>
-	<div class="boxtopic" style="top: 0;
-	bottom: 0;left: 50px;"id="boxtopic">
-		<label class="label1" id="temperature" style="left: 0;right: 0;top: 165px">Sensórica</label>
-		<div 
-			id="barraBrazo col-4" class="barraBrazo" >Aquí saldrá un scroll<br>
-			<br>sólo<br>dale<br>interlineados<br>simple<br>no ?
-		</div>
-	</div>
-	<div class="boxtopic" style="top: 0;
-	bottom: 0;left: 50px;"id="boxtopic">
-		<label class="label1"id="temperature" style="">Temperature<br>0 </label>
-		<div 
-			id="barraBrazo" class="barraBrazo" >Aquí saldrá un scroll<br>
-			<br>sólo<br>dale<br>interlineados<br>simple<br>no ?
-		</div>
-	</div>
+	</div>	
+
 </body>
