--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,6 +1,4 @@
-
-
-<div class='container-fluid'>
+<div>
    <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top">
       <div class="navbar-header">
          <a class="navbar-brand" href="#"><img style="height: 48px; padding: 2px 10px;" src="../assets/robocol-BLANCO.png"></a>
