--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa/brazo-cinematica-inversa.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa/brazo-cinematica-inversa.component.html
@@ -12,9 +12,9 @@
    <div class="row justify-content-center" style="margin-bottom: 10px;">
       <h4>Horizontal movement:</h4>
    </div>
-   <div class="col justify-content-center">
+   <div class="col justify-content-center text-center">
       <button style="margin-bottom: 7px;">FRONT</button>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center text-center">
          <button>LEFT</button>
          <button style="margin-left: 7px; margin-right: 7px;">REAR</button>
          <button>RIGHT</button>
@@ -26,25 +26,25 @@
    <div class="row justify-content-center" style="margin-bottom: 10px;">
       <h4>Rotation:</h4>
    </div>
-   <div class="row justify-content-center">
-      <div class="col justify-content-center">
+   <div class="row justify-content-center text-center">
+      <div class="col justify-content-center text-center">
          <h5>Roll</h5>
          <div class="row justify-content-center">
-            <button>CCW</button>
+            <button style="margin-right: 7px">CCW</button>
             <button>CW</button>
          </div>
       </div>
-      <div class="col justify-content-center">
+      <div class="col justify-content-center text-center">
          <h5>Pitch</h5>
          <div class="row justify-content-center">
-            <button>CCW</button>
+            <button style="margin-right: 7px">CCW</button>
             <button>CW</button>
          </div>
       </div>
-      <div class="col justify-content-center">
+      <div class="col justify-content-center text-center">
          <h5>Yaw</h5>
          <div class="row justify-content-center">
-            <button>CCW</button>
+            <button style="margin-right: 7px">CCW</button>
             <button>CW</button>
          </div>
       </div>
