--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -1,11 +1,36 @@
 <div class="row justify-content-center" style="margin-top: 15px">
    <div class="col-md-6 col-lg-4 text-center justify-content-center">
-      <app-brazo-cinematica-inversa></app-brazo-cinematica-inversa>
+      <div style="margin-left: 15px; margin-right: 15px; padding-right: 0px; padding-left: 0px;">
+         <app-brazo-coordenadas></app-brazo-coordenadas>
+      </div>
    </div>
    <div class="col-md-6 col-lg-3 justify-content-center text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
       <img style="width: 270px" src="../../../assets/arm_labels.png" alt="Brazo">
    </div>
-   <div class="col-lg-5">
-      <app-brazo-cinematica-directa></app-brazo-cinematica-directa>
+   <div class="col-lg-5 justify-content-center text-center">
+      <div id="accordion" role="tablist" aria-multiselectable="true">
+      	<div class="card">
+      		<div class="card-header" role="tab" id="headerInversa">
+      			<h5 class="mb-1">
+      				<a href="#colapsable1" data-parent="#accordion" class="btn btn-primary btn-block" data-toggle="collapse" aria-expanded="true" aria-controls="colapsable1">Cinemática inversa</a>
+      			</h5>
+      		</div>
+      		<div id="colapsable1" class="collapse" role="tabpanel" aria-labelledby="headerInversa">
+      			<div class="card-block" style="margin-top: 7px; margin-bottom: 7px;">
+      				<app-brazo-cinematica-inversa></app-brazo-cinematica-inversa>
+      			</div>
+      		</div>
+      		<div class="card-header" role="tab" id="headerDirecta">
+      			<h5 class="mb-1">
+      				<a href="#colapsable2" data-parent="#accordion" class="btn btn-primary btn-block" data-toggle="collapse" aria-expanded="true" aria-controls="colapsable1">Cinemática directa</a>
+      			</h5>
+      		</div>
+      		<div id="colapsable2" class="collapse" role="tabpanel" aria-labelledby="headerDirecta">
+      			<div class="card-block" style="margin-top: 7px; margin-bottom: 7px;">
+      				<app-brazo-cinematica-directa></app-brazo-cinematica-directa>
+      			</div>
+      		</div>
+      	</div>
+      </div>
    </div>
 </div>
