--- a/Robocol/testapp/src/app/rover/traccion/joystick/joystick.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/joystick/joystick.component.html
@@ -1,3 +1,21 @@
-<p>
-  joystick works!
-</p>
+<!-- Seleccion de topico -->
+<div class="card">
+  <div class="card-body">
+    <h5> Select Topic to Publish to </h5>
+    <select name="select">
+      <option value="topic1" selected>Topic 1</option> 
+      <option value="topic2" >Topic 2</option>
+      <option value="topic3">Topic 3</option>
+    </select>
+  </div>
+</div>
+
+<!-- Circulo -->
+<div class="card">
+  <div class="card-body">
+    <div  id="joystick_circle" >
+      <img src="../../../../assets/Negro.png" class="rounded-circle responsive">
+    </div>
+
+  </div>
+</div>
