--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
@@ -33,6 +33,12 @@
 					</tr>
 					<tr>
 						<th id="EVA_1_1"><img src="../../../assets/pirita.jpg" alt="Rocks" width="80px"></th>
+						<!-- <th id="EVA_1_1">
+							<div class="container">
+								<img src="../../../assets/pirita.jpg" alt="Rocks">
+								<button class="btn">Button</button>
+							</div>
+						</th> -->
 						<th id="EVA_1_3"><input type=submit value="3 - Full"></th>
 						<th id="EVA_1_5"><input type=submit value="5 - Full"></th>
 						<th id="EVA_2_1"><input type=submit value="1 - Empty"></th>
