--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.css
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.css
@@ -210,3 +210,36 @@ input
 	top: 80px;
 	right: 50px;
 } */
+
+
+/* Container needed to position the button. Adjust the width as needed */
+/* .container {
+  position: relative;
+  width: 50%;
+} */
+
+/* Make the image responsive */
+/* .container img {
+  width: 100%;
+  height: auto;
+} */
+
+/* Style the button and place it in the middle of the container/image */
+/* .container .btn {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 7px;
+  padding: 0px 0px;
+  border: none;
+  cursor: pointer;
+  border-radius: 0px;
+} */
+
+/* .container .btn:hover {
+  background-color: black;
+} */
